# llama.cpp.mcp

./: CMakeLists.txt
examples/: CMakeLists.txt
examples/simple-function-call/: CMakeLists.txt  README.md  llama-simple-function-call.cpp  simple-function-call.cpp
tools/: CMakeLists.txt
tools/mcp/: CMakeLists.txt  README.md
tools/mcp/simple-mcp-agent/: CMakeLists.txt  simple-mcp-agent.cp  simple-mcp-agent.cpp
tools/mcp/simple-mcp-client/: CMakeLists.txt  simple-mcp-client.cpp
